src/objects/SPE_ScoringTemplate__c.object
<CustomObject>
    <fields>
        <fullName>BusinessLine__c</fullName>
        <label>Business Line</label>
        <picklist>
            <picklistValues>
                <fullName>--None--</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>CARE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NETWORK IMPLEMENTATION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYSTEMS INTEGRATION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUSINESS SUPPORT SYSTEMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEDIA AND ENTERTAINMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3G CORE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARCHITECTURE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEM AND OSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FDD LTE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSMR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LIQUID CORE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MATURE PRODUCTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOBILE BROADBAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM PRODUCTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PERFECT VOICE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SECURITY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SINGLE RAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMALL CELL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TD LTE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGGREGATION</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BusinessUnit__c</fullName>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>--None--</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>GLOBAL SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MATURE SOFTWARE PRODUCTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOBILE BROADBAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPTICAL NETWORKS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CategoryCluster__c</fullName>
        <label>Category Area</label>
        <picklist>
            <picklistValues>
                <fullName>--None--</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>PRODUCT PROCUREMENT OPERATIONS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UNREPORTED SPEND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INDIRECT PROCUREMENT OPERATIONS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SERVICES PROCUREMENT OPERATIONS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CategoryGroup__c</fullName>
        <label>Category Group</label>
        <picklist>
            <picklistValues>
                <fullName>--None--</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>FACILITY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT PROCUREMENT &amp; TELECOMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOGISTICS SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PROFESSIONAL SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R&amp;D SUBCONTRACTING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TESTING MANUFACTURING &amp; MEASUREMENT EQUIPMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRAVEL &amp; FLEET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUSINESS INCUBATION &amp; E2E SOLUTIONS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELECTRONIC MANUFACTURING SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INTERCONNECT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MECHANICS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM/ODM/JDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPTICAL COMPONENTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEMICONDUCTOR AND RF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STANDARD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CARE SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXTERNAL WORKFORCE SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NI MATERIALS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBCONTRACTING MS NPO &amp; SI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBCONTRACTING OTHER NI SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBCONTRACTING TELECOM IMPLEMENTATION SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEACTIVATED STRUCTURES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DISCONTINUED BUSINESS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXPENDITURES REPORTED ERRONEOUSLY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NON-MANAGED EXPENDITURES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOT ASSIGNED SPEND GROUP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R&amp;D SOLUTIONS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HW &amp; SW SOLUTIONS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TELECOM OEM/ODM/JDM AND EMBEDDED POWER</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category_Hierarchy__c</fullName>
        <label>Category Hierarchy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>--None--</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>BUILDING INVESTMENT/CAPEX WITHOUT RENTS AND LEASES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FACILITY MANAGEMENT SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RENTAL/LEASE/TRANSACTIONS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UTILITIES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APPLICATION DEVELOPMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APPLICATION MAINTENANCE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT HW PERIPHERALS / SERVERS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INFRASTRUCTURE SERVICES &amp; CLOUD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOBILE VOICE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WORKPLACE DEVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASSOCIATED SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRANSPORT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WAREHOUSE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUSINESS SERVICES OTHERS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COACHING &amp; OTHER CONSULTING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONSULTING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FINANCIAL TAX &amp; INSURANCES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LEGAL &amp; INTELLECTUAL PROPERTY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MARKETING &amp; COMMUNICATIONS SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OFFICE SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TEST SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRAINING SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R&amp;D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FUNCTIONAL TEST EQUIPMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT PERIPHERAL DEVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MANUFACTURING AUXILIARIES AND CONSUMABLES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MANUFACTURING EQUIPMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PERFORMANCE TEST EQUIPMENT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>--None--</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Geo_Hierarchy__c</fullName>
        <description>Field to store the Geo Hierarchy</description>
        <label>Geo Hierarchy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KPIDefinitionName__c</fullName>
        <formula>SPEKPIMap__r.KPIDefinition__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>KPI Definition Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Group__c</fullName>
        <inlineHelpText>Relevant org/group for this data</inlineHelpText>
        <label>Organization/Group</label>
        <picklist>
            <picklistValues>
                <fullName>INDIRECT PROCUREMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRODUCT PROCUREMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SERVICES PROCUREMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partnering Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Broadband</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product1__c</fullName>
        <label>Product1</label>
        <picklist>
            <picklistValues>
                <fullName>--None--</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product2__c</fullName>
        <label>Product2</label>
        <picklist>
            <picklistValues>
                <fullName>--None--</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product3__c</fullName>
        <label>Product3</label>
        <picklist>
            <picklistValues>
                <fullName>--None--</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Hierarchy__c</fullName>
        <label>Product Hierarchy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <picklist>
            <controllingField>Country__c</controllingField>
            <picklistValues>
                <fullName>All Project</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>AF AWCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMC 2G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL VODAFONE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL M4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL PLUS CARE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DZ OOREDOO ALGERIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DZ.ORASCOM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALGERIA TELECOM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTI MOVIL ARG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TELEFONICA PANAMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR CTI MOVIL 3G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR CABLEVISION NGN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR TELECOM PERSONAL 3G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR TELECOM PDH/SDH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR CLARO ARGENTINA SWAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR TECO TDM EVOLUTION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEXTEL ARGENTINA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM ORANGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPTUS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VODAFONE AUSTRALIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU DOT DTRS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU NBN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT H3G OLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT NETCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT CALDERA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT TMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT H3G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT A1 AUSTRIA CARE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT ORANGE AUSTRIA CARE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Market</label>
        <picklist>
            <picklistValues>
                <fullName>--None--</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SPE2_KPI_Threshold__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SPE2 KPI Threshold</label>
        <referenceTo>SPE2_KPI_Threshold__c</referenceTo>
        <relationshipLabel>Scoring Templates</relationshipLabel>
        <relationshipName>Scoring_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SPEKPIMap__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SPE KPI Map</label>
        <referenceTo>SPE_SPEKPIMap__c</referenceTo>
        <relationshipLabel>Scoring Templates</relationshipLabel>
        <relationshipName>Scoring_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SPETemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SPE Template</label>
        <referenceTo>SPE_SPETemplate__c</referenceTo>
        <relationshipLabel>Scoring Templates</relationshipLabel>
        <relationshipName>Scoring_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ScoreingTemplateId__c</fullName>
        <displayFormat>STMP-{000000}</displayFormat>
        <label>Scoring Template Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ScoringTemplateCode__c</fullName>
        <displayFormat>STMP-{000000}</displayFormat>
        <label>Scoring Template Code</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Scoring_Template_Id__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp;Id, ScoringTemplateCode__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scoring Template Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Published</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pilot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obsolete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SubRegion__c</fullName>
        <label>Market Unit</label>
        <picklist>
            <picklistValues>
                <fullName>--None--</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Scoring Template</label>
    <nameField>
        <label>Scoring Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scoring Templates</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>SPE_special_character_not_allowed</fullName>
        <active>true</active>
        <description>Name should be start with Alphanumeric only</description>
        <errorConditionFormula>NOT(REGEX(Name, &quot;[a-zA-Z 0-9]{1}.*&quot;))</errorConditionFormula>
        <errorMessage>Name should be start with Alphanumeric only</errorMessage>
    </validationRules>
</CustomObject>